<resources>
    <string name="app_name">Centros Educativos Madrid</string>
    <string name="detalles_name">Detalles del centro</string>
    <string name="str_listado">Listado</string>
    <string name="str_mapa">Mapa</string>
    <string name="strTitulo">Buscador de centros educativos de la Comunidad de Madrid</string>
    <string name="strBtnFiltro">SELECCIONAR FILTRO</string>
    <string name="strBtnConsulta">CONSULTAR LISTADO</string>
    <string name="strPlaceholder">Placeholder</string>
    <string name="hintLat">Latitud</string>
    <string name="hintLong">Longitud</string>
    <string name="hintDist">Distancia en metros</string>
    <string name="latitud">Latitud: </string>
    <string name="longitud">Longitud: </string>
    <string name="distancia">Distancia: </string>
    <string name="filtro">%1$s: %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consultar_listado">Consultar Listado</string>
    <string name="consultar_mapa">CONSULTAR MAPA</string>

</resources>